fix double spacing for form choices in combination with form groups

--- a/components/_form-choice.scss
+++ b/components/_form-choice.scss
@@ -5,12 +5,17 @@
     display: block;
     margin-bottom: 0.5rem;
 
+    &:last-child {
+        margin-bottom: 0;
+    }
+
     .form--inline & {
         margin-bottom: 0;
     }
 
     .form-choice-list--inline & {
         display: inline-block;
+        margin-bottom: 0;
         margin-right: 0.5rem;
     }
 }
